Make autoclick animation start after cursor stops moving.

This fixes the constantly onscreen / somewhat noisy autoclick
animation to only show up when the user has stopped moving the
mouse as rapidly.

The click now occurs where the mouse position was when the
animation starts.

Bug: 915861
Change-Id: I536850bb8a2d0f2cac6add3cf2f693f68f3fb073
Reviewed-on: https://chromium-review.googlesource.com/c/1380950
Commit-Queue: Katie Dektar <katie@chromium.org>
Reviewed-by: David Tseng <dtseng@chromium.org>
Reviewed-by: Anastasia Helfinstein <anastasi@google.com>
Cr-Commit-Position: refs/heads/master@{#619579}
Former-commit-id: 5efdcb69d83ba4f57d4e732d090e320cc3a76cda